--- a/run/pom.xml
+++ b/run/pom.xml
@@ -17,10 +17,7 @@
   </developers>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <!-- Variables used for subsitution in resource files -->
-    <distroArtifactId>ozone-distro-cambodia</distroArtifactId>
     <distroVersion>1.0.0-SNAPSHOT</distroVersion>
-    <distro.classifier/>
   </properties>
   <profiles>
     <profile>
@@ -29,29 +26,84 @@
       <activation>
         <activeByDefault>false</activeByDefault>
       </activation>
+      <properties>
+        <distroArtifactId>ozone-distro-cambodia-prod</distroArtifactId>
+      </properties>
       <dependencies>
         <dependency>
           <groupId>com.ozonehis</groupId>
-          <artifactId>ozone-distro-cambodia</artifactId>
+          <artifactId>${distroArtifactId}</artifactId>
+          <version>${distroVersion}</version>
           <type>zip</type>
-          <version>1.0.0-SNAPSHOT</version>
-          <classifier>prod</classifier>
         </dependency>
       </dependencies>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-dependency-plugin</artifactId>
+            <version>2.8</version>
+            <executions>
+              <!-- Unpack Ozone Distro Cambodia-->
+              <execution>
+                <id>Unpack Ozone Distro Cambodia Prod</id>
+                <phase>generate-resources</phase>
+                <goals>
+                  <goal>unpack-dependencies</goal>
+                </goals>
+                <configuration>
+                  <excludeTransitive>true</excludeTransitive>
+                  <useBaseVersion>true</useBaseVersion>
+                  <outputDirectory>${project.build.directory}/${distroArtifactId}</outputDirectory>
+                  <includeArtifactIds>${distroArtifactId}</includeArtifactIds>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
     </profile>
     <profile>
       <id>default</id>
       <activation>
         <activeByDefault>true</activeByDefault>
       </activation>
+      <properties>
+        <distroArtifactId>ozone-distro-cambodia</distroArtifactId>
+      </properties>
       <dependencies>
         <dependency>
           <groupId>com.ozonehis</groupId>
-          <artifactId>ozone-distro-cambodia</artifactId>
+          <artifactId>${distroArtifactId}</artifactId>
+          <version>${distroVersion}</version>
           <type>zip</type>
-          <version>1.0.0-SNAPSHOT</version>
         </dependency>
       </dependencies>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-dependency-plugin</artifactId>
+            <version>2.8</version>
+            <executions>
+              <!-- Unpack Ozone Distro Cambodia-->
+              <execution>
+                <id>Unpack Ozone Distro Cambodia</id>
+                <phase>generate-resources</phase>
+                <goals>
+                  <goal>unpack-dependencies</goal>
+                </goals>
+                <configuration>
+                  <excludeTransitive>true</excludeTransitive>
+                  <useBaseVersion>true</useBaseVersion>
+                  <outputDirectory>${project.build.directory}/${distroArtifactId}</outputDirectory>
+                  <includeArtifactIds>${distroArtifactId}</includeArtifactIds>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
     </profile>
   </profiles>
   <dependencies>
@@ -83,20 +135,6 @@
               <includeArtifactIds>ozone-docker-compose</includeArtifactIds>
             </configuration>
           </execution>
-          <!-- Unpack Ozone Distro Cambodia-->
-          <execution>
-            <id>Unpack Ozone Distro Cambodia</id>
-            <phase>generate-resources</phase>
-            <goals>
-              <goal>unpack-dependencies</goal>
-            </goals>
-            <configuration>
-              <excludeTransitive>true</excludeTransitive>
-              <useBaseVersion>true</useBaseVersion>
-              <outputDirectory>${project.build.directory}/${distroArtifactId}</outputDirectory>
-              <includeArtifactIds>${distroArtifactId}</includeArtifactIds>
-            </configuration>
-          </execution>
         </executions>
       </plugin>
       <plugin>
@@ -107,7 +145,7 @@
           <execution>
             <!-- TODO: rework the namings: Substitue variables present in the resources/ folder -->
             <id>Substitute Variables in Resources</id>
-            <phase>generate-resources</phase>
+            <phase>process-resources</phase>
             <goals>
               <goal>copy-resources</goal>
             </goals>
@@ -131,7 +169,7 @@
           <execution>
             <!-- Concatenate env vars -->
             <id>Concatenate Environement Variables</id>
-            <phase>generate-resources</phase>
+            <phase>process-resources</phase>
             <goals>
               <goal>exec</goal>
             </goals>
