--- a/.ocd3.yml
+++ b/.ocd3.yml
@@ -1,5 +1,6 @@
 version: 1
 build:
-  bash_commands: "mvn clean install"
+  bash_commands: "exit 0"
 deploy:
-  bash_commands: "mvn clean deploy -DskipTests -DaltDeploymentRepository=mks-nexus-private::default::https://nexus.mekomsolutions.net/repository/maven-private-snapshots"
+  # Do not deploy via OCD3. Publishing is done via GitHub Actions. Temporary fix: Wait for 10m to make sure it's done in GA first.
+  bash_commands: "sleep 10m; exit 0"
