Hide Capture image button from the patient registration form

--- a/configs/ozone_config/frontend/ozone-frontend-config.json
+++ b/configs/ozone_config/frontend/ozone-frontend-config.json
@@ -7,6 +7,9 @@
       ],
       "fieldConfigurations":
       {
+        "name": {
+          "displayCapturePhoto": false
+        },
         "gender": [
           {
             "id": "male",
