Fix-Khmer-Translation-For-Village

--- a/configs/ozone_config/frontend/ozone-frontend-config.json
+++ b/configs/ozone_config/frontend/ozone-frontend-config.json
@@ -133,7 +133,7 @@
         },
         "km": {
           "Commune": "ឃុំ/សង្កាត់",
-          "Village": "ទីក្រុង",
+          "Village": "ភូមិ",
           "Country": "ប្រទេស",
           "Province": "ខេត្ត",
           "District": "ស្រុក/ខ័ណ្ឌ",
@@ -304,7 +304,7 @@
         },
         "km": {
           "address1": "ឃុំ/សង្កាត់",
-          "city": "ទីក្រុង",
+          "city": "ភូមិ",
           "Country": "ប្រទេស",
           "state": "ខេត្ត",
           "district": "ស្រុក/ខ័ណ្ឌ"
