--- a/run/pom.xml
+++ b/run/pom.xml
@@ -18,6 +18,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <distroVersion>1.0.0-SNAPSHOT</distroVersion>
+    <dockerComposeVersion>2.0.0-SNAPSHOT</dockerComposeVersion>
   </properties>
   <profiles>
     <profile>
@@ -111,7 +112,7 @@
       <groupId>com.ozonehis</groupId>
       <artifactId>ozone-docker-compose</artifactId>
       <type>zip</type>
-      <version>1.0.0-SNAPSHOT</version>
+      <version>${dockerComposeVersion}</version>
     </dependency>
   </dependencies>
   <build>
