--- a/prod/pom.xml
+++ b/prod/pom.xml
@@ -3,13 +3,13 @@
     <groupId>com.ozonehis</groupId>
     <artifactId>ozone-distro-cambodia-prod</artifactId>
     <name>Ozone Distribution for Cambodia - Production</name>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>pom</packaging>
 
     <parent>
         <groupId>com.ozonehis</groupId>
         <artifactId>ozone-distro-cambodia-parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <properties>
@@ -20,14 +20,14 @@
         <dependency>
             <groupId>com.ozonehis</groupId>
             <artifactId>ozone-distro-cambodia</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.0</version>
             <type>zip</type>
         </dependency>
         <dependency>
             <groupId>com.ozonehis</groupId>
             <artifactId>ozone-config-cambodia0</artifactId>
             <type>zip</type>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.0</version>
         </dependency>
     </dependencies>
     <build>
