KH-55: Add search by Address Hierachy

--- a/configs/ozone_config/frontend/ozone-frontend-config.json
+++ b/configs/ozone_config/frontend/ozone-frontend-config.json
@@ -7,6 +7,12 @@
     ],
     "fieldConfigurations":
     {
+      "address": {
+      "useAddressHierarchy": {
+        "enabled":true,
+        "searchAddressByLevel": true
+      }
+      },
       "name": {
         "displayCapturePhoto": false
       },
