--- a/base/pom.xml
+++ b/base/pom.xml
@@ -3,13 +3,13 @@
     <groupId>com.ozonehis</groupId>
     <artifactId>ozone-distro-cambodia</artifactId>
     <name>Ozone Distribution for Cambodia</name>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.1.0</version>
     <packaging>pom</packaging>
 
     <parent>
         <groupId>com.ozonehis</groupId>
         <artifactId>ozone-distro-cambodia-parent</artifactId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>1.1.0</version>
     </parent>
 
     <properties>
