--- a/configs/ozone_config/frontend/ozone-frontend-config.json
+++ b/configs/ozone_config/frontend/ozone-frontend-config.json
@@ -164,6 +164,10 @@
       {
         "uuid": "2792fddc-1ca6-4093-84d2-853bd9b0245e",
         "required": true
+      },
+      {
+        "uuid": "547f2d61-589f-4b04-9da8-8a5c639b5cc6",
+        "required": true
       }
     ],
     "extensionSlots": {
