KH-238: Remove middle name from registration form

--- a/configs/ozone_config/frontend/ozone-frontend-config.json
+++ b/configs/ozone_config/frontend/ozone-frontend-config.json
@@ -8,7 +8,8 @@
     "fieldConfigurations":
     {
       "name": {
-        "displayCapturePhoto": false
+        "displayCapturePhoto": false,
+        "displayMiddleName": false
       },
       "gender": [
         {
