KH-254: Make Visit Punctuality optional

--- a/configs/ozone_config/frontend/ozone-frontend-config.json
+++ b/configs/ozone_config/frontend/ozone-frontend-config.json
@@ -164,7 +164,7 @@
       },
       {
         "uuid": "2792fddc-1ca6-4093-84d2-853bd9b0245e",
-        "required": true
+        "required": false
       }
     ],
     "extensionSlots": {
