KH-246: Show family name first

--- a/configs/ozone_config/frontend/ozone-frontend-config.json
+++ b/configs/ozone_config/frontend/ozone-frontend-config.json
@@ -9,7 +9,8 @@
     {
       "name": {
         "displayCapturePhoto": false,
-        "displayMiddleName": false
+        "displayMiddleName": false,
+        "displayReverseFieldOrder": true
       },
       "gender": [
         {
