--- a/configs/ozone_config/frontend/ozone-frontend-config.json
+++ b/configs/ozone_config/frontend/ozone-frontend-config.json
@@ -178,6 +178,10 @@
         "required": true
       },
       {
+        "uuid": "1c75188f-625f-4181-a4e3-9de1d4f21f90",
+        "required": true
+      },
+      {
         "uuid": "547f2d61-589f-4b04-9da8-8a5c639b5cc6",
         "required": true
       }
