--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
       <groupId>com.ozonehis</groupId>
       <artifactId>ozone-distro</artifactId>
       <type>zip</type>
-      <version>1.0.0-alpha.2</version>
+      <version>1.0.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
 
