--- a/configs/ozone_config/frontend/ozone-frontend-config.json
+++ b/configs/ozone_config/frontend/ozone-frontend-config.json
@@ -28,11 +28,6 @@
           "id": "female",
           "value": "Female",
           "label": "Female"
-        },
-        {
-          "id": "other",
-          "value": "Other",
-          "label": "Other"
         }
       ]
     },
@@ -49,6 +44,13 @@
         "uuid": "7e142fa0-64ca-4220-ae90-a8f7f955458b",
         "placeholder": "placeholder",
         "answerConceptSetUuid": "2ef163b6-eec8-4678-abed-0dd261220168"
+      },
+      {
+        "id": "sexualOrientation",
+        "type": "person attribute",
+        "uuid": "cd36e567-7bec-465c-9a3e-32684861c17c",
+        "placeholder": "placeholder",
+        "answerConceptSetUuid": "12634919-8592-428f-8ae3-f14518d914c5"
       },
       {
         "id": "ethnicityField",
@@ -85,6 +87,7 @@
         "fields": [
           "name",
           "gender",
+          "sexualOrientation",
           "dob",
           "id"
         ]
