KH-261: Remove question for known patient from the registration form

--- a/configs/ozone_config/frontend/ozone-frontend-config.json
+++ b/configs/ozone_config/frontend/ozone-frontend-config.json
@@ -16,6 +16,7 @@
       "name": {
         "displayCapturePhoto": false,
         "displayMiddleName": false,
+        "allowUnidentifiedPatients": false,
         "displayReverseFieldOrder": true
       },
       "gender": [
