--- a/prod/pom.xml
+++ b/prod/pom.xml
@@ -6,11 +6,17 @@
     <version>1.2.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <parent>
-        <groupId>com.ozonehis</groupId>
-        <artifactId>ozone-distro-cambodia-parent</artifactId>
-        <version>1.2.0-SNAPSHOT</version>
-    </parent>
+    <organization>
+        <name>Ozone HIS</name>
+        <url>http://www.ozone-his.com</url>
+    </organization>
+
+    <developers>
+        <developer>
+            <name>Mekom Solutions</name>
+            <url>http://www.mekomsolutions.com</url>
+        </developer>
+    </developers>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -114,21 +120,25 @@
 
     <repositories>
         <repository>
-          <id>mks-nexus-private</id>
-          <url>https://nexus.mekomsolutions.net/repository/maven-private/</url>
+            <id>mks-nexus-private</id>
+            <url>https://nexus.mekomsolutions.net/repository/maven-private/</url>
         </repository>
-      </repositories>
-      
-      <distributionManagement>
         <repository>
-          <name>Mekom SolutionsNexus private repo for releases</name>
-          <id>mks-nexus-private</id>
-          <url>https://nexus.mekomsolutions.net/repository/maven-private-releases/</url>
+            <id>mks-nexus-public</id>
+            <url>https://nexus.mekomsolutions.net/repository/maven-private/</url>
+        </repository>
+    </repositories>
+
+    <distributionManagement>
+        <repository>
+            <name>Mekom SolutionsNexus private repo for releases</name>
+            <id>mks-nexus-private</id>
+            <url>https://nexus.mekomsolutions.net/repository/maven-private-releases/</url>
         </repository>
         <snapshotRepository>
-          <name>Mekom Solutions Nexus private repo for snapshots</name>
-          <id>mks-nexus-private-snapshots</id>
-          <url>https://nexus.mekomsolutions.net/repository/maven-private-snapshots</url>
+            <name>Mekom Solutions Nexus private repo for snapshots</name>
+            <id>mks-nexus-private-snapshots</id>
+            <url>https://nexus.mekomsolutions.net/repository/maven-private-snapshots</url>
         </snapshotRepository>
-      </distributionManagement>
+    </distributionManagement>
 </project>
