--- a/prod/pom.xml
+++ b/prod/pom.xml
@@ -17,6 +17,12 @@
             <url>http://www.mekomsolutions.com</url>
         </developer>
     </developers>
+    
+    <parent>
+        <groupId>com.ozonehis</groupId>
+        <artifactId>ozone-distro-cambodia-parent</artifactId>
+        <version>1.2.0-SNAPSHOT</version>
+    </parent>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
