--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <groupId>com.ozonehis</groupId>
   <artifactId>ozone-distro-cambodia-parent</artifactId>
   <name>Ozone Distribution for Cambodia - Parent project</name>
-  <version>1.2.0-SNAPSHOT</version>
+  <version>1.2.0</version>
   <packaging>pom</packaging>
 
   <organization>
@@ -44,7 +44,7 @@
       <groupId>com.ozonehis</groupId>
       <artifactId>ozone-distro</artifactId>
       <type>zip</type>
-      <version>1.0.0-SNAPSHOT</version>
+      <version>1.0.0-alpha.4</version>
     </dependency>
   </dependencies>
 
