--- a/prod/pom.xml
+++ b/prod/pom.xml
@@ -3,7 +3,7 @@
     <groupId>com.ozonehis</groupId>
     <artifactId>ozone-distro-cambodia-prod</artifactId>
     <name>Ozone Distribution for Cambodia - Production</name>
-    <version>1.2.0</version>
+    <version>1.2.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <organization>
@@ -21,7 +21,7 @@
     <parent>
         <groupId>com.ozonehis</groupId>
         <artifactId>ozone-distro-cambodia-parent</artifactId>
-        <version>1.2.0</version>
+        <version>1.2.1-SNAPSHOT</version>
     </parent>
 
     <properties>
@@ -32,7 +32,7 @@
         <dependency>
             <groupId>com.ozonehis</groupId>
             <artifactId>ozone-distro-cambodia</artifactId>
-            <version>1.2.0</version>
+            <version>1.2.1-SNAPSHOT</version>
             <type>zip</type>
         </dependency>
         <dependency>
@@ -131,7 +131,7 @@
         </repository>
         <repository>
             <id>mks-nexus-public</id>
-            <url>https://nexus.mekomsolutions.net/repository/maven-private/</url>
+            <url>https://nexus.mekomsolutions.net/repository/maven-public/</url>
         </repository>
     </repositories>
 
