--- a/run/pom.xml
+++ b/run/pom.xml
@@ -17,7 +17,7 @@
   </developers>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <distroVersion>1.2.0</distroVersion>
+    <distroVersion>1.2.1-SNAPSHOT</distroVersion>
     <dockerComposeVersion>1.0.0-alpha.4</dockerComposeVersion>
   </properties>
   <profiles>
