--- a/run/pom.xml
+++ b/run/pom.xml
@@ -17,8 +17,8 @@
   </developers>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <distroVersion>1.3.0-SNAPSHOT</distroVersion>
-    <dockerComposeVersion>1.0.0-SNAPSHOT</dockerComposeVersion>
+    <distroVersion>1.3.0</distroVersion>
+    <dockerComposeVersion>1.0.0-alpha.6</dockerComposeVersion>
   </properties>
   <profiles>
     <profile>
