--- a/run/pom.xml
+++ b/run/pom.xml
@@ -3,7 +3,7 @@
   <groupId>com.ozonehis</groupId>
   <artifactId>ozone-distro-cambodia-run</artifactId>
   <name>Utility project to fetch artifacts needed to run the Ozone Distribution for Cambodia</name>
-  <version>1.0.0</version>
+  <version>1.4.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <organization>
     <name>Ozone HIS</name>
@@ -17,8 +17,8 @@
   </developers>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <distroVersion>1.3.0</distroVersion>
-    <dockerComposeVersion>1.0.0-alpha.6</dockerComposeVersion>
+    <distroVersion>1.4.0-SNAPSHOT</distroVersion>
+    <dockerComposeVersion>1.0.0-SNAPSHOT</dockerComposeVersion>
   </properties>
   <profiles>
     <profile>
