Disable Changing Visit Location in the Start Visit form

--- a/configs/ozone_config/frontend/ozone-frontend-config.json
+++ b/configs/ozone_config/frontend/ozone-frontend-config.json
@@ -234,7 +234,8 @@
           }
         }
       }
-    }
+    },
+    "disableChangingVisitLocation": true 
   },
   "@openmrs/esm-patient-biometrics-app": {
     "Display conditions": {
