--- a/configs/ozone_config/frontend/ozone-frontend-config.json
+++ b/configs/ozone_config/frontend/ozone-frontend-config.json
@@ -1,9 +1,11 @@
 {
   "@openmrs/esm-patient-registration-app": {
     "sections": [
-      "demographicsSection",
-      "contactSection",
-      "additionalInformation"
+      "demographics",
+      "contact",
+      "additionalInformation",
+      "death",
+      "relationships"
     ],
     "fieldConfigurations":
     {
@@ -83,7 +85,7 @@
     ],
     "sectionDefinitions": [
       {
-        "id": "demographicsSection",
+        "id": "demographics",
         "name": "Basic Info",
         "fields": [
           "name",
@@ -94,7 +96,7 @@
         ]
       },
       {
-        "id": "contactSection",
+        "id": "contact",
         "name": "Contact Details",
         "fields": [
           "address",
@@ -113,12 +115,12 @@
         ]
       },
       {
-        "id": "deathSection",
+        "id": "death",
         "name": "Death Info",
         "fields": []
       },
       {
-        "id": "relationshipsSection",
+        "id": "relationships",
         "name": "Relationships",
         "fields": []
       }
@@ -138,6 +140,9 @@
         "District": "District",
         "contactSection": "Contact Details",
         "demographicsSection": "Basic Info",
+        "additionalInformationSection": "Additional Information",
+        "deathSection": "Death",
+        "relationshipsSection": "Relationships",
         "Male": "Male",
         "Female": "Female",
         "Other": "Other",
@@ -151,7 +156,10 @@
         "Province": "ខេត្ត",
         "District": "ស្រុក/ខ័ណ្ឌ",
         "contactSection": "ព័ត៌មានទំនាក់ទំនងលម្អិត",
-        "demographicsSection": "ព័ត៌មានមូលដ្ឋាន",
+        "demographicsSection": "ព័ត៌មានផ្ទាល់ខ្លួនអ្នកជំងឺ",
+        "additionalInformationSection": "ព័​ត៍​មាន​បន្ថែម",
+        "deathSection": "ព័ត៌មានមរណភាព",
+        "relationshipsSection": "ទំនាក់ទំនង",
         "Male": "ប្រុស",
         "Female": "ស្រី",
         "Other": "ផ្សេងៗ",
