--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,8 +1,7 @@
----
-
 tasks:
-  - init: ./start-distro.sh default
-
+  - name: Run Ozone Cambodia
+    init: sudo apt-get update && sudo apt-get install -y gettext-base && sudo rm -rf /var/lib/apt/lists/* && scripts/mvnw clean package
+    command: source base/target/go-to-scripts-dir.sh && ./start-demo.sh
 ports:
   - name: OpenMRS
     description: OpenMRS 3
