--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,7 @@
           <execution>
             <!-- Copy the docker-compose-files.txt file to set the services to run -->
             <id>Copy docker-compose-files.txt</id>
-            <phase>process-resources</phase>
+            <phase>prepare-package</phase>
             <goals>
               <goal>copy-resources</goal>
             </goals>
