KH-456: Updated translation for 'Facility'

--- a/configs/openmrs/frontend_config/ozone-frontend-config.json
+++ b/configs/openmrs/frontend_config/ozone-frontend-config.json
@@ -214,7 +214,7 @@
             },
             "data": [
               {
-                "label": "Facility (អាគារផ្តល់សេវា)",
+                "label": "Facility (ឈ្មោះមូលដ្ឋានសុខាភិបាល)",
                 "concept": "758b9dd8-b6d0-4ac2-b245-0e7bffb4693a",
                 "color": "blue"
               },
