--- a/configs/openmrs/frontend_config/ozone-frontend-config.json
+++ b/configs/openmrs/frontend_config/ozone-frontend-config.json
@@ -373,7 +373,7 @@
   },
   "@openmrs/esm-login-app": {
     "logo": {
-      "src": "ozone/emr_logo_color.svg",
+      "src": "ozone/emr_logo_dark.svg",
       "alt": "emr-logo"
     }
   },
