KH-426: Replace Ozone with MOH logo (#287)

--- a/configs/openmrs/frontend_config/ozone-frontend-config.json
+++ b/configs/openmrs/frontend_config/ozone-frontend-config.json
@@ -166,8 +166,8 @@
       }
     },    
     "logo": {
-      "src": "ozone/ozone_logo_white.svg",
-      "alt": "ozone-logo"
+      "src": "ozone/emr_logo_small.png",
+      "alt": "emr-logo"
     },
     "Display conditions": {
       "privileges": [
@@ -373,14 +373,14 @@
   },
   "@openmrs/esm-login-app": {
     "logo": {
-      "src": "ozone/ozone_logo_color.svg",
-      "alt": "ozone-logo"
+      "src": "ozone/emr_logo_color.png",
+      "alt": "emr-logo"
     }
   },
     "@openmrs/esm-primary-navigation-app": {
       "logo": {
-      "src": "ozone/ozone_logo_white.svg",
-      "alt": "ozone-logo"
+      "src": "ozone/emr_logo_small.png",
+      "alt": "emr-logo"
       },
       "extensionSlots": {
         "app-menu-slot": {
