--- a/base/pom.xml
+++ b/base/pom.xml
@@ -3,13 +3,13 @@
   <groupId>com.ozonehis</groupId>
   <artifactId>ozone-cambodia</artifactId>
   <name>Ozone for Cambodia</name>
-  <version>1.5.0</version>
+  <version>1.6.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <parent>
     <groupId>com.ozonehis</groupId>
     <artifactId>ozone-cambodia-parent</artifactId>
-    <version>1.5.0</version>
+    <version>1.6.0-SNAPSHOT</version>
   </parent>
 
   <properties>
@@ -21,7 +21,7 @@
       <groupId>com.ozonehis</groupId>
       <artifactId>ozone</artifactId>
       <type>zip</type>
-      <version>1.0.0-alpha.9</version>
+      <version>1.0.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
 
