--- a/base/pom.xml
+++ b/base/pom.xml
@@ -24,6 +24,23 @@
       <version>1.0.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
+  
+  <profiles>
+    <profile>
+      <id>validator</id>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-antrun-plugin</artifactId>
+          </plugin>
+          <plugin>
+            <groupId>org.openmrs.maven.plugins</groupId>
+              <artifactId>openmrs-packager-maven-plugin</artifactId>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 
   <build>
     <plugins>
