KH-428: Updated translation for 'mark patient deceased' in the patient chart

--- a/configs/openmrs/frontend_config/ozone-frontend-config.json
+++ b/configs/openmrs/frontend_config/ozone-frontend-config.json
@@ -162,7 +162,7 @@
       },
       "km": {
         "patientBreadcrumb": "អ្នកជំងឺ",
-        "markDeceased": "គូសលើអ្នកជាស្លាប់"
+        "markDeceased": "កំណត់ត្រាមរណភាព"
       }
     },    
     "logo": {
