Updated the translation for home

--- a/configs/openmrs/frontend_config/ozone-frontend-config.json
+++ b/configs/openmrs/frontend_config/ozone-frontend-config.json
@@ -343,6 +343,11 @@
     }
   },
   "@openmrs/esm-home-app": {
+    "Translation overrides": {
+      "km": {
+        "Home": "ទំព័រដើម"
+      }
+    },
     "extensionSlots": {
       "homepage-dashboard-slot": {
         "configure": {
