--- a/base/pom.xml
+++ b/base/pom.xml
@@ -21,7 +21,7 @@
       <groupId>com.ozonehis</groupId>
       <artifactId>ozone</artifactId>
       <type>zip</type>
-      <version>1.0.0-SNAPSHOT</version>
+      <version>1.0.0-alpha.9</version>
     </dependency>
   </dependencies>
 
